--- a/FreeCell/FreeCell.csproj
+++ b/FreeCell/FreeCell.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CardRank.cs" />
     <Compile Include="CardSuit.cs" />
     <Compile Include="Deck.cs" />
+    <Compile Include="GameplayScreen.cs" />
     <Compile Include="GameScreen.cs" />
     <Compile Include="GameScreenManager.cs" />
     <Compile Include="MainGame.cs" />
