--- a/FreeCell/FreeCell.csproj
+++ b/FreeCell/FreeCell.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CardRandomEngine.cs" />
+    <Compile Include="CardSelectionInformation.cs" />
     <Compile Include="TableauPile.cs" />
   </ItemGroup>
   <ItemGroup>
